# bah2026-ps1

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  environment.yml  idea.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/sample_outputs/: urbanheat_report.html  urbanheat_report.md
notebooks/: demo.py
research/: 01_lst_thermal_datasets.md  02_lulc_vegetation_surface.md  03_meteorological_atmospheric.md  04_urban_morphology_3d.md  05_physics_informed_ml.md  06_cooling_interventions_optimization.md  07_platform_oneapi_architecture.md  08_heat_stress_indices.md  09_validation_attribution_fusion.md  10_tools_ecosystem.md
tests/: conftest.py  test_config.py  test_constants.py  test_datamodel.py  test_energy_balance.py  test_heat_indices.py  test_hotspots.py  test_interventions.py  test_models.py  test_pipeline_smoke.py  test_synthetic.py
urbanheat/: __init__.py  cli.py  config.py  constants.py  datamodel.py
urbanheat/fusion/: __init__.py  robustness.py
urbanheat/gee/: __init__.py  auth.py  collections.py  features.py  fusion.py  lst.py  lulc.py  meteo.py  morphology.py  source.py
urbanheat/indices/: __init__.py  heat_indices.py  hotspots.py
urbanheat/interventions/: __init__.py  catalog.py  invest_cooling.py  optimize.py  simulate.py
urbanheat/models/: __init__.py  attribution.py  features.py  train.py  validation.py
urbanheat/physics/: __init__.py  energy_balance.py  pinn.py
urbanheat/synthetic/: __init__.py  source.py
urbanheat/viz/: __init__.py  maps.py  report.py
