[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urbanheat"
version = "0.1.0"
description = "Physics-informed, multi-satellite geospatial AI/ML for urban heat hotspot mapping, driver attribution, LST modelling, and cooling-intervention optimization (ISRO BAH-2026 PS-1)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
keywords = [
    "urban-heat-island", "land-surface-temperature", "google-earth-engine",
    "physics-informed-ml", "remote-sensing", "geospatial", "cooling-interventions",
]
authors = [{ name = "ISRO BAH-2026 PS-1 Team" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

# Lean core: enough for the SYNTHETIC demo and the GEE path. Heavy/credential/GPU
# deps are opt-in via extras below. Versions are loose lower bounds.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "joblib>=1.4",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2024.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterstats>=0.19",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "shap>=0.45",
    "statsmodels>=0.14",
    "libpysal>=4.10",
    "esda>=2.5",
    "verde>=1.8",
    "pymoo>=0.6",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
gee = ["earthengine-api>=1.0", "geemap>=0.32", "eemont>=0.3.6", "wxee>=0.4", "geetools>=1.0"]
stac = ["pystac-client>=0.8", "planetary-computer>=1.0", "stackstac>=0.5", "odc-stac>=0.3", "dask>=2024.4", "zarr>=2.17"]
app = ["streamlit>=1.33", "leafmap>=0.32", "folium>=0.16", "plotly>=5.20", "localtileserver>=0.10", "rio-cogeo>=5.1"]
morphology = ["osmnx>=1.9", "momepy>=0.7", "h3>=3.7"]
comfort = ["metpy>=1.6", "thermofeel>=2.1", "pythermalcomfort>=2.10"]
optimize = ["ortools>=9.9", "pulp>=2.8"]
spatial = ["mgwr>=2.2", "spreg>=1.4", "pymc>=5.10"]   # GWR coefficient maps, Bayesian UQ
physics = ["natcap.invest>=3.14", "invest-ucm-calibration", "supy>=2024.0"]  # InVEST/SUEWS; isolate env
dl = ["torch>=2.2", "pytorch-lightning>=2.2"]          # PINN / CNN super-resolution
dev = ["pytest>=8.0", "ruff>=0.4", "black>=24.0"]
all = [
    "urbanheat[gee,stac,app,morphology,comfort,optimize,spatial,dl,dev]",
]

[project.scripts]
urbanheat = "urbanheat.cli:main"

[project.urls]
"Problem Statement" = "ISRO Bharatiya Antariksh Hackathon 2026 — PS-1"

[tool.setuptools.packages.find]
include = ["urbanheat*"]
exclude = ["tests*", "notebooks*", "data*", "outputs*", "research*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "outputs", "research"]

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I import-sort, UP pyupgrade, B bugbear, W warnings.
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "E501",   # line length handled by black/line-length
    "B905",   # zip(..., strict=) not required on 3.10
]

[tool.ruff.lint.isort]
known-first-party = ["urbanheat"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "gee: tests that require Earth Engine credentials/network (skipped by default)",
    "slow: long-running tests",
]
